# ToniqueDAW

./: .gitignore  Cargo.toml  README.md  TODO.md
.github/workflows/: rust.yml
src/: analysis.rs  cache.rs  config.rs  main.rs  message.rs  metrics.rs  output.rs  ui.rs  ui_main.rs  waveform.rs
src/audio/: clip.rs  engine.rs  export.rs  input.rs  metronome.rs  midi.rs  mod.rs  output.rs  player.rs  preview.rs  process.rs  track.rs
src/audio/clip/: midi.rs  mod.rs
src/audio/instrument/: mod.rs
src/audio/track/: audio.rs  bus.rs  midi.rs  mod.rs
src/components/: bottom_panel.rs  buttons.rs  clip.rs  effect.rs  filebrowser.rs  filepicker.rs  grid.rs  left_panel.rs  loudness_meter.rs  mod.rs  top_bar.rs  track.rs  track_manager.rs  waveform.rs  workspace.rs
src/components/effects/: equalizer.rs  mod.rs
src/config/: hotkeys.rs  mod.rs
src/core/: clip.rs  export.rs  grid.rs  message.rs  metrics.rs  mod.rs  state.rs  track.rs
src/core/services/: track.rs
src/core/state/: action.rs  looping.rs  mod.rs  tests.rs  transport.rs
src/core/state/services/: track.rs
src/ui/: app.rs  buttons.rs  clip.rs  effect.rs  filebrowser.rs  font.rs  grid.rs  mod.rs  theme.rs  track.rs  track_manager.rs  utils.rs  waveform.rs  window.rs  workspace.rs
src/ui/effects/: equalizer.rs  mod.rs
src/ui/panels/: bottom_panel.rs  central_panel.rs  decoration_panel.rs  left_panel.rs  menu_bar.rs  mod.rs  top_bar.rs  window_bar.rs
src/ui/view/: export.rs  mod.rs  navigation_bar.rs  tracks.rs
src/ui/view/filebrowser/: file_tree.rs  items.rs  mod.rs  preview.rs
src/ui/view/timeline/: drag.rs  keys.rs  mod.rs  selection.rs
src/ui/widget/: context_menu.rs  input.rs  item_button.rs  meter.rs  mod.rs  rectangle.rs  square_button.rs
src/utils/: mod.rs  tests.rs
