[package]
name = "tonique_daw"
version = "0.1.0"
authors = ["Rémi Ravelli <remi.ravelli@gmail.com>"]
edition = "2024"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.32"
rtrb = "0.3"
cpal = "0.15"
creek = { version = "1.2.2", features = ["decode-mp3"] }
rfd = "0.15.4"
symphonia = "0.5.4"
uuid = { version = "1.17.0", features = ["v4"] }
egui-phosphor = { version = "0.10.0", features = ["fill"] }
egui = "0.32"
once_cell = "1.21.3"
dashmap = "6.1.0"
rand = "0.9.2"
sysinfo = "0.36.1"
rubato = "0.16.2"
directories = "6.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
fundsp = "0.20.0"
rustfft = "6.4.0"
rayon = "1.11.0"
midir = "0.10.2"
midly = "0.5.3"
